packages/isar/test/errors/class/mixin.dart
// only classes

import 'package:isar/isar.dart';

// ignore_for_file: avoid_classes_with_only_static_members
// Test case for mixin validation
@collection
mixin Test {}
